# zbar

./: .gitignore  CMakeLists.txt  Dockerfile  configure.ac
zbar/: CMakeLists.txt  config.cmake  decoder.c
zbar/processor/: win.c
zbar/qrcode/: qrdectxt.c
